# serializer version: 1
# name: test_all_switches[switch.pool_device_frequency_input-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.pool_device_frequency_input',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Frequency input',
    'platform': 'pooldose',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'frequency_input',
    'unique_id': 'TEST123456789_frequency_input',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_switches[switch.pool_device_frequency_input-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Pool Device Frequency input',
    }),
    'context': <ANY>,
    'entity_id': 'switch.pool_device_frequency_input',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_switches[switch.pool_device_pause_dosing-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.pool_device_pause_dosing',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Pause dosing',
    'platform': 'pooldose',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'pause_dosing',
    'unique_id': 'TEST123456789_pause_dosing',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_switches[switch.pool_device_pause_dosing-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Pool Device Pause dosing',
    }),
    'context': <ANY>,
    'entity_id': 'switch.pool_device_pause_dosing',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_switches[switch.pool_device_pump_monitoring-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.pool_device_pump_monitoring',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Pump monitoring',
    'platform': 'pooldose',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'pump_monitoring',
    'unique_id': 'TEST123456789_pump_monitoring',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_switches[switch.pool_device_pump_monitoring-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Pool Device Pump monitoring',
    }),
    'context': <ANY>,
    'entity_id': 'switch.pool_device_pump_monitoring',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
